--- a/fonts-practice/web-font-start.css
+++ b/fonts-practice/web-font-start.css
@@ -1,5 +1,21 @@
 /* General setup */
 
+@font-face {
+    font-family: 'open_sansregular';
+    src: url('./openSans/opensans-regular-webfont.woff2') format('woff2'),
+        url('./openSans/opensans-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'alex_brushregular';
+    src: url('./alexBrush/alexbrush-regular-webfont.woff2') format('woff2'),
+        url('./alexBrush/alexbrush-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 html {
     font-size: 10px;
     margin: 0;
@@ -16,13 +32,16 @@ body {
 
 h1 {
     font-size: 3.2rem;
+    font-family: "alex_brushregular";
 }
 
 h2 {
+    font-family: "open_sansregular";
     font-size: 2.4rem;
 }
 
 p {
+    font-family: "open_sansregular";
     font-size: 1.4rem;
     line-height: 1.6;
     word-spacing: 0.6rem;
