--- a/ejs/views/index.ejs
+++ b/ejs/views/index.ejs
@@ -8,6 +8,6 @@
     <% for (let i = 0; i < users.length; ++i) { %>
         <%- include('users/user', {user: users[i]}) %>
     <% } %>
-
+    <%- include('footer', {contactLink: contactLink}) %>
 </body>
 </html>
