--- a/authent/views/index.ejs
+++ b/authent/views/index.ejs
@@ -1,9 +1,25 @@
-<html>
-    <head>
-        <title> Homepage </title>
-        <link rel="stylesheet" href="/styles.css">
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="../public/styles.css">
+</head>
 <body>
-        <p>Hello world</p>
+        <% if (locals.user) { %>
+            <h1>Welcome back, <%=user.username %></h1>
+            <a href="/log-out">Log out</a>
+        <% } else { %>
+            <h1>Please log in</h1>
+            <form action="/log-in" method="POST">
+              <label for="username">Username</label>
+              <input id="username" name="username" placeholder="username" type="text" />
+              <label for="password">Password</label>
+              <input id="password" name="password" type="password" />
+              <button type="submit">Log In</button>
+            </form>
+            <a href="/sign-up">Sign up</a>
+        <% } %>
 </body>
 </html>
